--- a/html/about.html
+++ b/html/about.html
@@ -14,12 +14,12 @@
       <header class="centered">
         <input type="checkbox" id="drawer-toggle"/>
         <label for="drawer-toggle">
-          <div class="menu"></div>
+          <span class="menu"></span>
         </label>
 
         <nav>
           <ul>
-            <li><a href="../">
+            <li><a href="../index">
               <img src="../img/common/logo.svg" alt="My github logotype of the letter V"/>
             </a></li>
             <li><a href="./resume">Résumé</a></li>
@@ -51,7 +51,7 @@
         <h1>Social links</h1>
         <ul>
           <li><a href="mailto:victor.m.winberg@gmail.com"><img src="../img/icons/envelope.svg" alt="An envelope" width="20" height="20"/></a></li>
-          <li><a href="//victorwinberg.github.io"><img src="../img/icons/github.svg" alt="Github logotype" width="20" height="20"/></a></li>
+          <li><a href="//github.com/victorwinberg"><img src="../img/icons/github.svg" alt="Github logotype" width="20" height="20"/></a></li>
           <li><a href="//www.linkedin.com/in/victorwinberg"><img src="../img/icons/linkedin.svg" alt="Linkedin logotype" width="20" height="20"/></a></li>
           <li><a href="//www.facebook.com/NevaSsounD"><img src="../img/icons/facebook.svg" alt="Facebook logotype" width="20" height="20"/></a></li>
           <li><a href="//www.youtube.com/user/VictorW95"><img src="../img/icons/youtube.svg" alt="YouTube logotype" width="20" height="20"/></a></li>
