--- a/html/contact.html
+++ b/html/contact.html
@@ -14,12 +14,12 @@
       <header class="centered">
         <input type="checkbox" id="drawer-toggle"/>
         <label for="drawer-toggle">
-          <div class="menu"></div>
+          <span class="menu"></span>
         </label>
 
         <nav>
           <ul>
-            <li><a href="../">
+            <li><a href="../index">
               <img src="../img/common/logo.svg" alt="My github logotype of the letter V"/>
             </a></li>
             <li><a href="./resume">Résumé</a></li>
