--- a/html/gallery.html
+++ b/html/gallery.html
@@ -14,12 +14,12 @@
       <header class="centered">
         <input type="checkbox" id="drawer-toggle"/>
         <label for="drawer-toggle">
-          <div class="menu"></div>
+          <span class="menu"></span>
         </label>
 
         <nav>
           <ul>
-            <li><a href="../">
+            <li><a href="../index">
               <img src="../img/common/logo.svg" alt="My github logotype of the letter V"/>
             </a></li>
             <li><a href="./resume">Résumé</a></li>
@@ -42,7 +42,7 @@
           <div class="item seven"><p>Riomaggiore in Cinque Terre, Italy</p></div>
           <div class="item tall eight"><p>Genoa, Italy</p></div>
           <div class="item nine"><p>Villach, Austria</p></div>
-          <div class="item large ten"><p>Trdelník, Prague, Czech Republic</p></div>
+          <div class="item large ten"><p>Trdelnik, Prague, Czech Republic</p></div>
           <div class="item eleven"><p>Barcelona, Spain</p></div>
           <div class="item tall twelve"><p>Leaning Tower of Pisa, Italy</p></div>
           <div class="item thirteen"><p>Blue Lagoon, Ayia Napa</p></div>
