--- a/html/resume.html
+++ b/html/resume.html
@@ -14,12 +14,12 @@
       <header class="centered">
         <input type="checkbox" id="drawer-toggle"/>
         <label for="drawer-toggle">
-          <div class="menu"></div>
+          <span class="menu"></span>
         </label>
 
         <nav>
           <ul>
-            <li><a href="../">
+            <li><a href="../index">
               <img src="../img/common/logo.svg" alt="My github logotype of the letter V"/>
             </a></li>
             <li><a href="./resume" class="active">Résumé</a></li>
@@ -85,48 +85,68 @@
         </table>
 
         <h1>Programming languages</h1>
-        <dl>
-          <dt>Java</dt>
-          <dd>100%</dd>
-          <div class="w100"></div>
-          <dt>HTML</dt>
-          <dd>85%</dd>
-          <div class="w85"></div>
-          <dt>Javascript</dt>
-          <dd>85%</dd>
-          <div class="w85"></div>
-          <dt>Python</dt>
-          <dd>75%</dd>
-          <div class="w75"></div>
-          <dt>Scala</dt>
-          <dd>60%</dd>
-          <div class="w60"></div>
-          <dt>Ruby</dt>
-          <dd>55%</dd>
-          <div class="w55"></div>
-          <dt>C#</dt>
-          <dd>50%</dd>
-          <div class="w50"></div>
-          <dt>CSS</dt>
-          <dd>40%</dd>
-          <div class="w40"></div>
-        </dl>
+        <ul class="skill">
+          <li>
+            <span>Java</span>
+            <span>100%</span>
+            <span class="w100"></span>
+          </li>
+          <li>
+            <span>HTML</span>
+            <span>85%</span>
+            <span class="w85"></span>
+          </li>
+          <li>
+            <span>Javascript</span>
+            <span>85%</span>
+            <span class="w85"></span>
+          </li>
+          <li>
+            <span>Python</span>
+            <span>75%</span>
+            <span class="w75"></span>
+          </li>
+          <li>
+            <span>Scala</span>
+            <span>60%</span>
+            <span class="w60"></span>
+          </li>
+          <li>
+            <span>Ruby</span>
+            <span>55%</span>
+            <span class="w55"></span>
+          </li>
+          <li>
+            <span>C#</span>
+            <span>50%</span>
+            <span class="w50"></span>
+          </li>
+          <li>
+            <span>CSS</span>
+            <span>40%</span>
+            <span class="w40"></span>
+          </li>
+        </ul>
 
         <h1>Frameworks</h1>
-        <dl>
-          <dt>ReactJS</dt>
-          <dd>100%</dd>
-          <div class="w100"></div>
-          <dt>NodeJS</dt>
-          <dd>80%</dd>
-          <div class="w80"></div>
-          <dt>AngularJS</dt>
-          <dd>80%</dd>
-          <div class="w80"></div>
-          <dt>Ruby on Rails</dt>
-          <dd>70%</dd>
-          <div class="w70"></div>
-        </dl>
+        <ul class="skill">
+          <li>
+            <span>ReactJS</span>
+            <span>100%</span>
+            <span class="w100"></span>
+          <li>
+            <span>NodeJS</span>
+            <span>80%</span>
+            <span class="w80"></span>
+          <li>
+            <span>AngularJS</span>
+            <span>80%</span>
+            <span class="w80"></span>
+          <li>
+            <span>Ruby on Rails</span>
+            <span>70%</span>
+            <span class="w70"></span>
+        </ul>
       </main>
 
       <footer>
