--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <header>
         <input type="checkbox" id="drawer-toggle"/>
         <label for="drawer-toggle">
-          <div class="menu"></div>
+          <span class="menu"></span>
         </label>
 
         <nav>
           <ul>
-            <li><a href="./" class="active">
+            <li><a href="./index" class="active">
               <img src="./img/common/logo.svg" alt="My github logotype of the letter V"/>
             </a></li>
             <li><a href="./html/resume">Résumé</a></li>
