--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li><a href="http://www.lunicore.se">Lunicore</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For ideel</li>
-                <li><a href="https://onelist.ml">OneList</a></li>
+                <li><a href="https://shop.codeparty.ml">OneList</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">For school</li>
                 <li><a href="http://www.teknikfokus.se">Teknikfokus 2016</a></li>
