--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
     <link rel="stylesheet" type="text/css" href="./css/globalreset.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="icon"       href="img/logo.png">
     <title>Victor Winberg Portfolio</title>
   </head>
 
