--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Description tags -->
   <meta name="author" content="Victor Winberg">
-  <link rel="icon" href="img/v_64x64.png">
+  <link rel="icon" href="img/logo.png">
 
   <title>Victor Winberg</title>
 
