--- a/html/gallery.html
+++ b/html/gallery.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
     <link rel="stylesheet" type="text/css" href="../css/globalreset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="icon" href="../img/logo.png">
     <title>Victor Winberg Portfolio</title>
   </head>
 
@@ -24,7 +25,7 @@
             </a></li>
             <li><a href="./resume">Résumé</a></li>
             <li><a href="./gallery" class="active">Gallery</a></li>
-            <li><a href="./contact">Contact</a></li>
+            <li><a href="./projects">Projects</a></li>
             <li><a href="./about">About</a></li>
           </ul>
         </nav>
@@ -52,7 +53,7 @@
       </main>
 
       <footer>
-        <span>© Copyright 2018 | Victor Winberg</span>
+        <span>© Copyright 2019 | Victor Winberg</span>
       </footer>
     </div>
   </body>
