--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
     <link rel="stylesheet" type="text/css" href="./css/globalreset.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="icon"       href="img/logo.png">
+    <link rel="icon"       href="./img/logo.png">
     <title>Victor Winberg Portfolio</title>
   </head>
 
@@ -25,7 +25,7 @@
             </a></li>
             <li><a href="./html/resume">Résumé</a></li>
             <li><a href="./html/gallery">Gallery</a></li>
-            <li><a href="./html/contact">Contact</a></li>
+            <li><a href="./html/projects">Projects</a></li>
             <li><a href="./html/about">About</a></li>
           </ul>
         </nav>
@@ -34,11 +34,11 @@
       <main>
         <img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200"/>
         <h1>Victor Winberg</h1>
-        <p>Developer | Student | Dedicated</p>
+        <p>Dedicated | Developer | Student</p>
       </main>
 
       <footer>
-        <span>© Copyright 2018 | Victor Winberg</span>
+        <span>© Copyright 2019 | Victor Winberg</span>
       </footer>
     </div>
   </body>
