--- a/html/resume.html
+++ b/html/resume.html
@@ -148,6 +148,12 @@
             <span>70%</span>
             <span class="w70"></span>
         </ul>
+
+        <h1>Download Résumé</h1>
+        <ul>
+          <li><a href="https://www.codeparty.ml/cv/en.pdf">Résumé in English</a></li>
+          <li><a href="https://www.codeparty.ml/cv/sv.pdf">Résumé in Swedish</a></li>
+        </ul>
       </main>
 
       <footer>
