--- a/html/projects.html
+++ b/html/projects.html
@@ -37,12 +37,12 @@
           <tbody class="col-3">
             <tr>
               <td class="project"><h4>Datateknik</h4></td>
-              <td class="location"><h3><a href="datateknik">git.io/datateknik</a></h3></td>
+              <td class="location"><h3><a href="../datateknik">git.io/datateknik</a></h3></td>
               <td class="description"><p>Summaries and compiled material for and from courses at LTH</p></td>
             </tr>
             <tr>
               <td class="project"><h4>Magasinet</h4></td>
-              <td class="location"><h3><a href="magasinet">git.io/magasinet</a></h3></td>
+              <td class="location"><h3><a href="../magasinet">git.io/magasinet</a></h3></td>
               <td class="description"><p>Fetching apartments' data from AF Bostäder API</p></td>
             </tr>
             <tr>
@@ -52,7 +52,7 @@
             </tr>
             <tr class="clear">
               <td class="project"><h4>MyAds</h4></td>
-              <td class="location"><h3><a href="myads">git.io/myads</a></h3></td>
+              <td class="location"><h3><a href="../myads">git.io/myads</a></h3></td>
               <td class="description"><p>Lund Innovation Challenge 2017</p></td>
             </tr>
             <trv>
@@ -62,7 +62,7 @@
             </tr>
             <tr>
               <td class="project"><h4>LHS</h4></td>
-              <td class="location"><h3><a href="LHS">git.io/lhs</a></h3></td>
+              <td class="location"><h3><a href="../LHS">git.io/lhs</a></h3></td>
               <td class="description"><p>Last Hen Standing Project</p></td>
             </tr>
             <tr class="clear">
