--- a/html/resume.html
+++ b/html/resume.html
@@ -151,8 +151,8 @@
 
         <h1>Download Résumé</h1>
         <ul>
-          <li><a href="https://www.codeparty.ml/cv/en.pdf">Résumé in English</a></li>
-          <li><a href="https://www.codeparty.ml/cv/sv.pdf">Résumé in Swedish</a></li>
+          <li><a href="https://www.avinc.tech/cv/en.pdf">Résumé in English</a></li>
+          <li><a href="https://www.avinc.tech/cv/sv.pdf">Résumé in Swedish</a></li>
         </ul>
       </main>
 
