--- a/html/resume.html
+++ b/html/resume.html
@@ -47,7 +47,19 @@
         <table>
           <tbody class="col-2">
             <tr>
-              <td class="date"><small>Jun 2017 - Present</small></td>
+              <td class="date"><small>Sep 2019 - Present</small></td>
+              <td class="title"><h4>Consultant</h4></td>
+              <td class="location"><h3>Netcompany, Copenhagen</h3></td>
+              <td class="description"><p></p></td>
+            </tr>
+            <tr>
+              <td class="date"><small>Aug 2017 - Dec 2018</small></td>
+              <td class="title"><h4>Tutor</h4></td>
+              <td class="location"><h3>Lund University, Lund</h3></td>
+              <td class="description"><p>Course: EDAA45 - Introduction to Programming http://cs.lth.se/pgk/</p></td>
+            </tr>
+            <tr>
+              <td class="date"><small>Jun 2017 - Aug 2018</small></td>
               <td class="title"><h4>Software Developer</h4></td>
               <td class="location"><h3>Axis, Lund</h3></td>
               <td class="description"><p>Development of a full stack application, NodeJS (React & Express) and MySQL, with advanced management of risks and users for the multiple applications.</p></td>
@@ -88,17 +100,17 @@
         <h1>Programming languages</h1>
         <ul class="skill">
           <li>
-            <span>Java</span>
+            <span>Javascript</span>
             <span>100%</span>
+            <span class="w85"></span>
+          </li>
+          <li>
+            <span>Java</span>
+            <span>90%</span>
             <span class="w100"></span>
           </li>
           <li>
             <span>HTML</span>
-            <span>85%</span>
-            <span class="w85"></span>
-          </li>
-          <li>
-            <span>Javascript</span>
             <span>85%</span>
             <span class="w85"></span>
           </li>
@@ -135,18 +147,22 @@
             <span>ReactJS</span>
             <span>100%</span>
             <span class="w100"></span>
+          </li>
           <li>
             <span>NodeJS</span>
             <span>80%</span>
             <span class="w80"></span>
+          </li>
           <li>
             <span>AngularJS</span>
             <span>80%</span>
             <span class="w80"></span>
+          </li>
           <li>
             <span>Ruby on Rails</span>
             <span>70%</span>
             <span class="w70"></span>
+          </li>
         </ul>
 
         <h1>Download Résumé</h1>
