--- a/html/projects.html
+++ b/html/projects.html
@@ -47,7 +47,7 @@
             </tr>
             <tr>
               <td class="project"><h4>OneList</h4></td>
-              <td class="location"><h3><a href="https://shop.codeparty.ml">shop.codeparty.ml</a></h3></td>
+              <td class="location"><h3><a href="https://github.com/VictorWinberg/OneList">git.com/OneList</a></h3></td>
               <td class="description"><p>Shopping List Project</p></td>
             </tr>
             <tr class="clear">
