--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <main>
         <img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200"/>
         <h1>Victor Winberg</h1>
-        <p>Dedicated | Developer | Student</p>
+        <p>Dedicated | Determined | Developer</p>
       </main>
 
       <footer>
