Add year javascript

--- a/html/about.html
+++ b/html/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
     <link rel="stylesheet" type="text/css" href="../css/globalreset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <script type="text/javascript" src="../js/script.js"></script>
     <link rel="icon" href="../img/logo.png">
     <title>Victor Winberg Portfolio</title>
   </head>
@@ -46,7 +47,7 @@
 
         <h1>Personal interests</h1>
         <p>
-          My professional and hobby interests exists within software, software design, game development, image & graphics, web design and web creation. My favorite hobbies is to create my own websites, developing games and editing movies.
+          My professional and hobby interests exists within software, software design, game development, image & graphics, web design and web creation. On my spare time I create my own websites, develop games and edit videos.
         </p>
 
         <h1>Social links</h1>
@@ -60,7 +61,7 @@
       </main>
 
       <footer>
-        <span>© Copyright 2019 | Victor Winberg</span>
+        <span>© Copyright <span id="year">2019</span> | Victor Winberg</span>
       </footer>
     </div>
   </body>
