--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
     <link rel="stylesheet" type="text/css" href="./css/globalreset.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script type="text/javascript" src="./js/script.js"></script>
     <link rel="icon"       href="./img/logo.png">
     <title>Victor Winberg Portfolio</title>
   </head>
@@ -38,7 +39,7 @@
       </main>
 
       <footer>
-        <span>© Copyright 2019 | Victor Winberg</span>
+        <span>© Copyright <span id="year">2019</span> | Victor Winberg</span>
       </footer>
     </div>
   </body>
