--- a/html/resume.html
+++ b/html/resume.html
@@ -103,17 +103,22 @@
           <li>
             <span>Javascript</span>
             <span>100%</span>
-            <span class="w85"></span>
+            <span class="w100"></span>
           </li>
           <li>
-            <span>Java</span>
-            <span>90%</span>
+            <span>Typescript</span>
+            <span>100%</span>
             <span class="w100"></span>
           </li>
           <li>
             <span>HTML</span>
-            <span>85%</span>
-            <span class="w85"></span>
+            <span>100%</span>
+            <span class="w100"></span>
+          </li>
+          <li>
+            <span>SCSS (Sass)</span>
+            <span>90%</span>
+            <span class="w90"></span>
           </li>
           <li>
             <span>Python</span>
@@ -126,41 +131,31 @@
             <span class="w60"></span>
           </li>
           <li>
-            <span>Ruby</span>
+            <span>SQL</span>
             <span>55%</span>
             <span class="w55"></span>
-          </li>
-          <li>
-            <span>C#</span>
-            <span>50%</span>
-            <span class="w50"></span>
-          </li>
-          <li>
-            <span>CSS</span>
-            <span>40%</span>
-            <span class="w40"></span>
           </li>
         </ul>
 
         <h1>Frameworks</h1>
         <ul class="skill">
           <li>
-            <span>ReactJS</span>
+            <span>Vue.js</span>
             <span>100%</span>
             <span class="w100"></span>
           </li>
           <li>
-            <span>NodeJS</span>
+            <span>React.js</span>
+            <span>100%</span>
+            <span class="w100"></span>
+          </li>
+          <li>
+            <span>Express.js</span>
             <span>80%</span>
             <span class="w80"></span>
           </li>
           <li>
-            <span>AngularJS</span>
-            <span>80%</span>
-            <span class="w80"></span>
-          </li>
-          <li>
-            <span>Ruby on Rails</span>
+            <span>Angular</span>
             <span>70%</span>
             <span class="w70"></span>
           </li>
@@ -168,8 +163,8 @@
 
         <h1>Download Résumé</h1>
         <ul>
-          <li><a href="https://www.avinc.tech/cv/en.pdf">Résumé in English</a></li>
-          <li><a href="https://www.avinc.tech/cv/sv.pdf">Résumé in Swedish</a></li>
+          <li><a href="https://www.zolly.ml/cv/en.pdf">Résumé in English</a></li>
+          <li><a href="https://www.zolly.ml/cv/sv.pdf">Résumé in Swedish</a></li>
         </ul>
       </main>
 
