--- a/html/resume.html
+++ b/html/resume.html
@@ -35,13 +35,13 @@
       <main>
         <h1>Career Objective</h1>
         <p>
-          Dedicated and focused engineering student with a passion for programming, problem solving and challenges! My greatest strengths is the willingness to learn new things and my social side.
+          Dedicated and focused developer with a passion for programming, problem solving and challenges! My greatest strengths is the willingness to learn new things and my social capacity.
         </p>
         <p>
-          Previous work experience as a developer, IT-technicians, retail sellers and cashier. Previously functionary of the sections committee responsible for the contact and cooperation with companies.
+          Previous work experience as a software developer and functionary of the sections committee responsible for the contact and cooperation with companies. 
         </p>
         <p>
-          Looking for a service where I can further develop my skills in programming and problem solving, as well as get the opportunity to learn new. In group I am a cheerful, initiative and cooperative guy, with great commitment and hungry for new challenges.
+          In teams I'm cheerful, initiative and cooperative, with a great commitment and hunger for new challenges.
         </p>
 
         <h1>Work Experience</h1>
