Move html files from html folder

--- a/gallery.html
+++ b/gallery.html
@@ -1,29 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
-    <link rel="stylesheet" type="text/css" href="../css/globalreset.css">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700" />
+    <link rel="stylesheet" type="text/css" href="../css/globalreset.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <script type="text/javascript" src="../js/script.js"></script>
-    <link rel="icon" href="../img/logo.png">
+    <link rel="icon" href="../img/logo.png" />
     <title>Victor Winberg Portfolio</title>
   </head>
 
   <body>
     <div class="container">
       <header class="centered">
-        <input type="checkbox" id="drawer-toggle"/>
+        <input type="checkbox" id="drawer-toggle" />
         <label for="drawer-toggle">
           <span class="menu"></span>
         </label>
 
         <nav>
           <ul>
-            <li><a href="../index">
-              <img src="../img/common/logo.svg" alt="My github logotype of the letter V"/>
-            </a></li>
+            <li>
+              <a href="../">
+                <img src="../img/common/logo.svg" alt="My github logotype of the letter V" />
+              </a>
+            </li>
             <li><a href="./resume">Résumé</a></li>
             <li><a href="./gallery" class="active">Gallery</a></li>
             <li><a href="./projects">Projects</a></li>
