--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 
         <nav>
           <ul>
-            <li><a href="../index">
+            <li><a href="../">
               <img src="../img/common/logo.svg" alt="My github logotype of the letter V"/>
             </a></li>
             <li><a href="./resume">Résumé</a></li>
