--- a/resume.html
+++ b/resume.html
@@ -1,29 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
-    <link rel="stylesheet" type="text/css" href="../css/globalreset.css">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700" />
+    <link rel="stylesheet" type="text/css" href="../css/globalreset.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <script type="text/javascript" src="../js/script.js"></script>
-    <link rel="icon" href="../img/logo.png">
+    <link rel="icon" href="../img/logo.png" />
     <title>Victor Winberg Portfolio</title>
   </head>
 
   <body>
     <div class="container">
       <header class="centered">
-        <input type="checkbox" id="drawer-toggle"/>
+        <input type="checkbox" id="drawer-toggle" />
         <label for="drawer-toggle">
           <span class="menu"></span>
         </label>
 
         <nav>
           <ul>
-            <li><a href="../index">
-              <img src="../img/common/logo.svg" alt="My github logotype of the letter V"/>
-            </a></li>
+            <li>
+              <a href="../">
+                <img src="../img/common/logo.svg" alt="My github logotype of the letter V" />
+              </a>
+            </li>
             <li><a href="./resume" class="active">Résumé</a></li>
             <li><a href="./gallery">Gallery</a></li>
             <li><a href="./projects">Projects</a></li>
@@ -34,15 +36,9 @@
 
       <main>
         <h1>Career Objective</h1>
-        <p>
-          Dedicated and focused developer with a passion for programming, problem solving and challenges! My greatest strengths is the willingness to learn new things and my social capacity.
-        </p>
-        <p>
-          Previous work experience as a software developer and functionary of the sections committee responsible for the contact and cooperation with companies. 
-        </p>
-        <p>
-          In teams I'm cheerful, initiative and cooperative, with a great commitment and hunger for new challenges.
-        </p>
+        <p>Dedicated and focused developer with a passion for programming, problem solving and challenges! My greatest strengths is the willingness to learn new things and my social capacity.</p>
+        <p>Previous work experience as a software developer and functionary of the sections committee responsible for the contact and cooperation with companies.</p>
+        <p>In teams I'm cheerful, initiative and cooperative, with a great commitment and hunger for new challenges.</p>
 
         <h1>Work Experience</h1>
         <table>
@@ -63,13 +59,17 @@
               <td class="date"><small>Jun 2017 - Aug 2018</small></td>
               <td class="title"><h4>Software Developer</h4></td>
               <td class="location"><h3>Axis, Lund</h3></td>
-              <td class="description"><p>Development of a full stack application, NodeJS (React & Express) and MySQL, with advanced management of risks and users for the multiple applications.</p></td>
+              <td class="description">
+                <p>Development of a full stack application, NodeJS (React & Express) and MySQL, with advanced management of risks and users for the multiple applications.</p>
+              </td>
             </tr>
             <tr>
               <td class="date"><small>Jun 2015 - Aug 2017</small></td>
               <td class="title"><h4>IT Consultant</h4></td>
               <td class="location"><h3>Lunicore, Lund</h3></td>
-              <td class="description"><p>Participated in projects yourself and in groups with other consultants, often with different skills and experience. Projects vary greatly in design, scope and focus areas.</p></td>
+              <td class="description">
+                <p>Participated in projects yourself and in groups with other consultants, often with different skills and experience. Projects vary greatly in design, scope and focus areas.</p>
+              </td>
             </tr>
             <tr class="clear">
               <td class="date"><small>Apr 2015 - Jun 2015</small></td>
@@ -93,7 +93,9 @@
               <td class="date"><small>2014 - 2019</small></td>
               <td class="title"><h4>Master of Science in Computer Engineering</h4></td>
               <td class="location"><h3>Faculty of Engineering LTH, Lund University</h3></td>
-              <td class="description"><p>The education in Computer Engineering aims to meet the demand for engineers who are developing advanced computer technologies, systems and applications.</p></td>
+              <td class="description">
+                <p>The education in Computer Engineering aims to meet the demand for engineers who are developing advanced computer technologies, systems and applications.</p>
+              </td>
             </tr>
           </tbody>
         </table>
