--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700">
-    <link rel="stylesheet" type="text/css" href="./css/globalreset.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700" />
+    <link rel="stylesheet" type="text/css" href="./css/globalreset.css" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <script type="text/javascript" src="./js/script.js"></script>
-    <link rel="icon"       href="./img/logo.png">
+    <link rel="icon" href="./img/logo.png" />
     <title>Victor Winberg Portfolio</title>
   </head>
 
   <body>
     <div class="container centered">
       <header>
-        <input type="checkbox" id="drawer-toggle"/>
+        <input type="checkbox" id="drawer-toggle" />
         <label for="drawer-toggle">
           <span class="menu"></span>
         </label>
 
         <nav>
           <ul>
-            <li><a href="./index" class="active">
-              <img src="./img/common/logo.svg" alt="My github logotype of the letter V"/>
-            </a></li>
-            <li><a href="./html/resume">Résumé</a></li>
-            <li><a href="./html/gallery">Gallery</a></li>
-            <li><a href="./html/projects">Projects</a></li>
-            <li><a href="./html/about">About</a></li>
+            <li>
+              <a href="./" class="active">
+                <img src="./img/common/logo.svg" alt="My github logotype of the letter V" />
+              </a>
+            </li>
+            <li><a href="./resume">Résumé</a></li>
+            <li><a href="./gallery">Gallery</a></li>
+            <li><a href="./projects">Projects</a></li>
+            <li><a href="./about">About</a></li>
           </ul>
         </nav>
       </header>
 
       <main>
-        <img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200"/>
+        <img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200" />
         <h1>Victor Winberg</h1>
         <p>Dedicated | Determined | Developer</p>
       </main>
