--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
 
       <main>
-        <img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200" />
+        <a href="./debug.css"><img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200" /></a>
         <h1>Victor Winberg</h1>
         <p>Dedicated | Determined | Developer</p>
       </main>
