--- a/debug.css.html
+++ b/debug.css.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="container centered">
+    <div class="container">
       <header>
         <input type="checkbox" id="drawer-toggle" />
         <label for="drawer-toggle">
@@ -32,7 +32,7 @@
         </nav>
       </header>
 
-      <main>
+      <main class="centered">
         <h1>Debug.css</h1>
 
         <b>
