--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="container">
-      <header class="centered">
+      <header>
         <input type="checkbox" id="drawer-toggle" />
         <label for="drawer-toggle">
           <span class="menu"></span>
@@ -36,7 +36,7 @@
 
       <main>
         <h1>Gallery</h1>
-        <div class="portfolio centered">
+        <div class="portfolio">
           <div class="item large one"><p>Stab, LTH</p></div>
           <div class="item two"><p>Nollning, LTH</p></div>
           <div class="item tall three"><p>The Lost City of Pompeii, Italy</p></div>
