--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="container centered">
+    <div class="container">
       <header>
         <input type="checkbox" id="drawer-toggle" />
         <label for="drawer-toggle">
@@ -34,7 +34,7 @@
         </nav>
       </header>
 
-      <main>
+      <main class="centered">
         <a href="./debug.css"><img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200" /></a>
         <h1>Victor Winberg</h1>
         <p>Dedicated | Determined | Developer</p>
