--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="container">
-      <header class="centered">
+      <header>
         <input type="checkbox" id="drawer-toggle"/>
         <label for="drawer-toggle">
           <span class="menu"></span>
