Add img to debug.css

--- a/debug.css.html
+++ b/debug.css.html
@@ -33,6 +33,7 @@
       </header>
 
       <main class="centered">
+        <a href="./"><img class="circle img-debug" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200" /></a>
         <h1>Debug.css</h1>
 
         <b>
