Add github and linkedin badges

--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
             </tr>
             <tr>
               <td class="project"><h4>OneList</h4></td>
-              <td class="location"><h3><a href="https://github.com/VictorWinberg/OneList">git.com/OneList</a></h3></td>
+              <td class="location"><h3><a href="//github.com/VictorWinberg/OneList">git.com/OneList</a></h3></td>
               <td class="description"><p>Shopping List Project</p></td>
             </tr>
             <tr class="clear">
@@ -58,7 +58,7 @@
             </tr>
             <trv>
               <td class="project"><h4>ereuntzdag</h4></td>
-              <td class="location"><h3><a href="http://catarinasorensen.github.io/ereuntzdag.se/">ereuntzdag.se</a></h3></td>
+              <td class="location"><h3><a href="//catarinasorensen.github.io/ereuntzdag.se/">ereuntzdag.se</a></h3></td>
               <td class="description"><p>Countdown and check for next Untzdag</p></td>
             </tr>
             <tr>
@@ -68,32 +68,32 @@
             </tr>
             <tr class="clear">
               <td class="project"><h4>Advanced Web Security</h4></td>
-              <td class="location"><h3><a href="https://github.com/VictorWinberg/fjuo52">git.com/eitn41</a></h3></td>
+              <td class="location"><h3><a href="//github.com/VictorWinberg/fjuo52">git.com/eitn41</a></h3></td>
               <td class="description"><p>Labs in cryptographic security solutions for web based technologies</p></td>
             </tr>
             <tr>
               <td class="project"><h4>Google Hash Code 2018</h4></td>
-              <td class="location"><h3><a href="https://github.com/VictorWinberg/hashcode2018">git.com/hashcode2018</a></h3></td>
+              <td class="location"><h3><a href="//github.com/VictorWinberg/hashcode2018">git.com/hashcode2018</a></h3></td>
               <td class="description"><p>A programming competition organized by Google in Europe</p></td>
             </tr>
             <tr>
               <td class="project"><h4>Intro Game Programming</h4></td>
-              <td class="location"><h3><a href="https://github.com/VictorWinberg/Sector-Clear">git.com/sector-clear</a></h3></td>
+              <td class="location"><h3><a href="//github.com/VictorWinberg/Sector-Clear">git.com/sector-clear</a></h3></td>
               <td class="description"><p>Introduction course to Game Programming</p></td>
             </tr>
             <tr class="clear">
               <td class="project"><h4>Network Programming</h4></td>
-              <td class="location"><h3><a href="https://github.com/VictorWinberg/edaf65-project">git.com/edaf65</a></h3></td>
+              <td class="location"><h3><a href="//github.com/VictorWinberg/edaf65-project">git.com/edaf65</a></h3></td>
               <td class="description"><p>Network Programming course with sockets and websockets</p></td>
             </tr>
             <tr>
               <td class="project"><h4>Graph vs Relational Databases</h4></td>
-              <td class="location"><h3><a href="https://github.com/VictorWinberg/graph-relational-benchmark">git.com/graph-relational-benchmark</a></h3></td>
+              <td class="location"><h3><a href="//github.com/VictorWinberg/graph-relational-benchmark">git.com/graph-relational-benchmark</a></h3></td>
               <td class="description"><p>Master Thesis Project that benchmark and compares databases performance</p></td>
             </tr>
             <tr>
               <td class="project"><h4>Unity3D Game</h4></td>
-              <td class="location"><h3><a href="https://github.com/VictorWinberg/unity-game">git.com/unity-game</a></h3></td>
+              <td class="location"><h3><a href="//github.com/VictorWinberg/unity-game">git.com/unity-game</a></h3></td>
               <td class="description"><p>An Unity3D Game Project</p></td>
             </tr>
           </tbody>
@@ -101,7 +101,7 @@
       </main>
 
       <footer>
-        <span>© Copyright <span id="year">2019</span> | Victor Winberg</span>
+        <span>© Copyright <span id="year">2020</span> | Victor Winberg</span>
       </footer>
     </div>
   </body>
