--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
               <td class="date"><small>Aug 2017 - Dec 2018</small></td>
               <td class="title"><h4>Tutor</h4></td>
               <td class="location"><h3>Lund University, Lund</h3></td>
-              <td class="description"><p>Course: EDAA45 - Introduction to Programming http://cs.lth.se/pgk/</p></td>
+              <td class="description"><p>Course: EDAA45 - Introduction to Programming <a href="//cs.lth.se/pgk/">cs.lth.se/pgk</a></p></td>
             </tr>
             <tr>
               <td class="date"><small>Jun 2017 - Aug 2018</small></td>
@@ -165,13 +165,13 @@
 
         <h1>Download Résumé</h1>
         <ul>
-          <li><a href="https://www.zolly.ml/cv/en.pdf">Résumé in English</a></li>
-          <li><a href="https://www.zolly.ml/cv/sv.pdf">Résumé in Swedish</a></li>
+          <li><a href="//www.zolly.ml/cv/en.pdf">Résumé in English</a></li>
+          <li><a href="//www.zolly.ml/cv/sv.pdf">Résumé in Swedish</a></li>
         </ul>
       </main>
 
       <footer>
-        <span>© Copyright <span id="year">2019</span> | Victor Winberg</span>
+        <span>© Copyright <span id="year">2020</span> | Victor Winberg</span>
       </footer>
     </div>
   </body>
