--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         </p>
 
         <h1>Social links</h1>
-        <ul>
+        <ul class="social">
           <li>
             <a href="mailto:victor.m.winberg@gmail.com"><img src="../img/icons/envelope.svg" alt="An envelope" width="20" height="20" /></a>
           </li>
@@ -73,7 +73,7 @@
       </main>
 
       <footer>
-        <span>© Copyright <span id="year">2019</span> | Victor Winberg</span>
+        <span>© Copyright <span id="year">2020</span> | Victor Winberg</span>
       </footer>
     </div>
   </body>
