--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,700" />
     <link rel="stylesheet" type="text/css" href="./css/globalreset.css" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/linkedin.css" />
     <script type="text/javascript" src="./js/script.js"></script>
+    <script type="text/javascript" src="./js/github.js"></script>
     <link rel="icon" href="./img/logo.png" />
     <title>Victor Winberg Portfolio</title>
   </head>
@@ -35,14 +37,24 @@
       </header>
 
       <main class="centered">
-        <a href="./debug.css"><img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200" /></a>
+        <div>
+          <a href="./debug.css"><img class="circle" src="./img/about/profile.jpg" alt="My profile picture" height="200" width="200" /></a>
+        </div>
         <h1>Victor Winberg</h1>
         <p>Dedicated | Determined | Developer</p>
+
+        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="victorwinberg">
+          <a class="LI-simple-link" href="//se.linkedin.com/in/victorwinberg?trk=profile-badge"></a>
+        </div>
+
+        <div id="github"></div>
       </main>
 
       <footer>
-        <span>© Copyright <span id="year">2019</span> | Victor Winberg</span>
+        <span>© Copyright <span id="year">2020</span> | Victor Winberg</span>
       </footer>
     </div>
+
+    <script type="text/javascript" src="//platform.linkedin.com/badges/js/profile.js" async defer></script>
   </body>
 </html>
