--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,13 @@
         <table>
           <tbody class="col-2">
             <tr>
-              <td class="date"><small>Sep 2019 - Present</small></td>
+              <td class="date"><small>Oct 2020 - Present</small></td>
+              <td class="title"><h4>Software Developer</h4></td>
+              <td class="location"><h3>Jayway, Malmo</h3></td>
+              <td class="description"><p></p></td>
+            </tr>
+            <tr>
+              <td class="date"><small>Sep 2019 - Sep 2020</small></td>
               <td class="title"><h4>Consultant</h4></td>
               <td class="location"><h3>Netcompany, Copenhagen</h3></td>
               <td class="description"><p></p></td>
