--- a/resume.html
+++ b/resume.html
@@ -170,7 +170,7 @@
         </ul>
 
         <h1>Download Résumé</h1>
-        <ul>
+        <ul class="social">
           <li><a href="//www.zolly.ml/cv/en.pdf">Résumé in English</a></li>
           <li><a href="//www.zolly.ml/cv/sv.pdf">Résumé in Swedish</a></li>
         </ul>
