--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         </p>
 
         <h1>Social links</h1>
-        <ul class="social">
+        <ul class="boxes">
           <li>
             <a href="mailto:victor.m.winberg@gmail.com"><img src="../img/icons/envelope.svg" alt="An envelope" width="20" height="20" /></a>
           </li>
