--- a/resume.html
+++ b/resume.html
@@ -170,9 +170,9 @@
         </ul>
 
         <h1>Download Résumé</h1>
-        <ul class="social">
-          <li><a href="//www.zolly.ml/cv/en.pdf">Résumé in English</a></li>
-          <li><a href="//www.zolly.ml/cv/sv.pdf">Résumé in Swedish</a></li>
+        <ul class="boxes">
+          <li><a href="//www.zolly.ml/cv/en.pdf">English CV</a></li>
+          <li><a href="//www.zolly.ml/cv/sv.pdf">Swedish CV</a></li>
         </ul>
       </main>
 
