--- a/gallery.html
+++ b/gallery.html
@@ -38,11 +38,11 @@
         <h1>Gallery</h1>
         <div class="portfolio">
           <div class="item large one"><p>Stab, LTH</p></div>
-          <div class="item two"><p>Nollning, LTH</p></div>
+          <div class="item two"><p>Business Committee, LTH</p></div>
           <div class="item tall three"><p>The Lost City of Pompeii, Italy</p></div>
-          <div class="item four"><p>Business Committee, LTH</p></div>
+          <div class="item four"><p>Colosseum in Rome, Italy</p></div>
           <div class="item five"><p>Marseille, France</p></div>
-          <div class="item six"><p>Colosseum in Rome, Italy</p></div>
+          <div class="item six"><p>Nollning, LTH</p></div>
           <div class="item seven"><p>Riomaggiore in Cinque Terre, Italy</p></div>
           <div class="item tall eight"><p>Genoa, Italy</p></div>
           <div class="item nine"><p>Villach, Austria</p></div>
