Fix LinkedIn style

--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
       </footer>
     </div>
 
-    <script type="text/javascript" src="//platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <script type="text/javascript" src="./js/linkedin.js" async defer></script>
   </body>
 </html>
