--- a/microjs.html
+++ b/microjs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
     <title>MicroJS</title>
+    <link rel="icon" href="./img/logo.png" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/water.css@2/out/water.css" />
   </head>
   <body>
