Add Project Manager

--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
           <tbody class="col-2">
             <tr>
               <td class="date"><small>Oct 2020 - Present</small></td>
-              <td class="title"><h4>Software Developer</h4></td>
+              <td class="title"><h4>Software Developer / Project Manager</h4></td>
               <td class="location"><h3>Jayway, Malmo</h3></td>
               <td class="description"><p></p></td>
             </tr>
