--- a/debug.css.html
+++ b/debug.css.html
@@ -53,6 +53,15 @@
           </a>
         </b>
         <br />
+        
+        <b>
+          <a
+            href='javascript:var _cedit=document.body.contentEditable==="true"; document.body.spellcheck=false; document.body.contentEditable=(_cedit ? %27inherit%27 : %27true%27); document.body.style.border = _cedit ? %27%27:%273px solid red%27; document.designMode=_cedit?%27off%27:%27on%27; void 0'
+          >
+            Edit HTML
+          </a>
+        </b>
+        <br />
 
         <br />
 
