--- a/resume.html
+++ b/resume.html
@@ -44,10 +44,16 @@
         <table>
           <tbody class="col-2">
             <tr>
-              <td class="date"><small>Oct 2020 - Present</small></td>
+              <td class="date"><small>May 2022 - Present</small></td>
+              <td class="title"><h4>Back End Developer</h4></td>
+              <td class="location"><h3>Doktor.se, Malmo</h3></td>
+              <td class="description"><p></p></td>
+            </tr>
+            <tr>
+              <td class="date"><small>Oct 2020 - Apr 2022</small></td>
               <td class="title"><h4>Software Developer / Project Manager</h4></td>
               <td class="location"><h3>Jayway, Malmo</h3></td>
-              <td class="description"><p></p></td>
+              <td class="description"><p>Development of a front end search and A/B-test monitoring application in hyperapp. Project Manager + Tech Lead - held dailies, retros, refinement and planning sessions.</p></td>
             </tr>
             <tr>
               <td class="date"><small>Sep 2019 - Sep 2020</small></td>
