Add Netcompany description

--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@
               <td class="date"><small>Sep 2019 - Sep 2020</small></td>
               <td class="title"><h4>Consultant</h4></td>
               <td class="location"><h3>Netcompany, Copenhagen</h3></td>
-              <td class="description"><p></p></td>
+              <td class="description"><p>Development of a full stack java application and an Umbraco + Vue system.</p></td>
             </tr>
             <tr>
               <td class="date"><small>Aug 2017 - Dec 2018</small></td>
