--- a/debug.css.html
+++ b/debug.css.html
@@ -63,6 +63,16 @@
         </b>
         <br />
 
+        <b>
+          <a
+            href='javascript: /* copy url link to clipboard */ !function(a){ function copyToClipboard(text) { navigator.clipboard.writeText(text).then(function() { console.log("Copying to clipboard was successful!"); }, function(err) { alert("Could not copy text: ", err); }); } switch(true) { case !!location.href.match(/^https:\/\/github.com\/.*\/pull\//): { var title = document.querySelector(".gh-header-title").innerText.trim(); return copyToClipboard(`[${title}](${location.href})`); } case !!location.href.match(/^https:\/\/favro.com\/.*card=/): { var id = document.querySelector(".js-cardid").innerText; var title = document.querySelector(".js-card-details-title").value; return copyToClipboard(`[${id}: ${title}](${location.href})`); } default: { return copyToClipboard(`[${document.title}](${location.href})`); } } }(window);'
+          >
+            Copy URL (markdown)
+          </a>
+        </b>
+        <br />
+
+
         <br />
 
         <i>Click on the link to test it</i><br />
