new domain codies.se

--- a/resume.html
+++ b/resume.html
@@ -167,8 +167,8 @@
 
         <h1>Download Résumé</h1>
         <ul class="boxes">
-          <li><a href="//www.zolly.ml/cv/en.pdf">English CV</a></li>
-          <li><a href="//www.zolly.ml/cv/sv.pdf">Swedish CV</a></li>
+          <li><a href="//www.codies.se/cv/en.pdf">English CV</a></li>
+          <li><a href="//www.codies.se/cv/sv.pdf">Swedish CV</a></li>
         </ul>
       </main>
 
